--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,7 +1,5 @@
 <h1>Home#show</h1>
 <p>Find me in app/views/home/show.html.erb</p>
 <div class="background-wrap">
-  <video id="video-back" preload="auto" autoplay="true" loop="loop" muted="muted">
-    <source src="/home/jscastelblancoh/Vídeos/Webcam/2017-10-23-123113.webm" type="video/">
-  </video>
+  <%= video_tag "PLANETA.mp4", preload: 'auto', autoplay: true, muted: true, loop: "loop" %>
 </div>
