--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,5 +1,31 @@
-<h1>Home#show</h1>
-<p>Find me in app/views/home/show.html.erb</p>
-<div class="background-wrap">
-  <%= video_tag "PLANETA.mp4", preload: 'auto', autoplay: true, muted: true, loop: "loop" %>
-</div>
+<nav class="navbar navbar-inverse" >
+  <div id="header" class="container-fluid">
+    <div class="navbar-header">
+    </div>
+    <div>
+      <ul class="nav navbar-nav navbar-right">
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<section class="container-fluid sections">
+  	<div class="container">
+
+    </div>
+</section>
+
+<section class="container-fluid sections">
+  	<div class="container">
+
+    </div>
+</section>
+
+<section class="container-fluid sections tres">
+  	<div class="container">
+      <div class="background-wrap cent_vert">
+        <%= video_tag "PLANETA.mp4", preload: 'auto', autoplay: true, muted: true, loop: "loop"%>
+      </div>
+    </div>
+</section>
